--- a/pinjamBuku/templates/pinjamBuku/index.html
+++ b/pinjamBuku/templates/pinjamBuku/index.html
@@ -16,7 +16,23 @@
       <h1 class="text-3xl font-bold">Table List Transaction Borrow Book</h1>
       <a href="{% url 'pinjamBuku:addTransaction'%}" class="bg-green-600 p-2 rounded-md text-white hover:cursor-pointer">Add Transaction</a>
     </div>
-    <div class="overflow-x-auto mx-10 mt-5">
+    <div class="mt-3 mx-10 flex-row-reverse">
+      <span class="step-links">
+          <span class="current">
+              Page {{ page.number }} of {{ page.paginator.num_pages }}
+          </span>
+          {% if page.has_previous %}
+              <!-- <a href="?page=1">&laquo; first</a> -->
+              <a class="text-blue-700 underline" href="?page={{ page.previous_page_number }}"> < previous</a>
+          {% endif %}
+
+          {% if page.has_next %}
+              <a class="text-blue-700 underline" href="?page={{ page.next_page_number }}">next ></a>
+              <!-- <a href="?page={{ page.paginator.num_pages }}">last &raquo;</a> -->
+          {% endif %}
+      </span>
+  </div>
+    <div class="overflow-x-auto mx-10 mt-2">
       <table class="min-w-full bg-white border border-gray-200">
         <thead>
           <tr class="bg-gray-200">
@@ -29,8 +45,8 @@
           </tr>
         </thead>
         <tbody>
-          {% if transactions_borrow_book %}
-            {% for transaction in transactions_borrow_book %}
+          {% if page %}
+            {% for transaction in page.object_list %}
             <tr>
               <td class="py-2 px-4 border-b">{{ transaction.borrower.full_name }}</td>
               <td class="py-2 px-4 border-b">{{ transaction.book.name }}</td>
@@ -42,12 +58,14 @@
                 {% if transaction.is_past_deadline  %}
                   <form method="POST" action="{% url 'pinjamBuku:updateStatusTransaction'%}">
                       {% csrf_token %}
+                      <input type="hidden" name="page_number" value="{{ page.number }}" />
                       <input type="hidden" name="status" value="penalty" />
                       <input type="hidden" name="id" value="{{ transaction.id }}" />
                       <input class="bg-red-300 p-2 rounded-md hover:cursor-pointer mt-2" type="submit" value="Pay Penalty" />
                   </form>
                   <form method="POST" action="{% url 'pinjamBuku:updateStatusTransaction'%}">
                     {% csrf_token %}
+                    <input type="hidden" name="page_number" value="{{ page.number }}" />
                     <input type="hidden" name="status" value="cancel" />
                     <input type="hidden" name="id" value="{{ transaction.id }}" />
                     <input class="bg-red-300 p-2 rounded-md hover:cursor-pointer mt-2" type="submit" value="Cancel" />
@@ -55,12 +73,14 @@
                   {% elif transaction.status != 'returned' %}
                   <form method="POST" action="{% url 'pinjamBuku:updateStatusTransaction'%}">
                     {% csrf_token %}
+                    <input type="hidden" name="page_number" value="{{ page.number }}" />
                     <input type="hidden" name="status" value="returned" />
                     <input type="hidden" name="id" value="{{ transaction.id }}" />
                     <input class="bg-green-300 p-2 rounded-md hover:cursor-pointer" type="submit" value="Return" />
                   </form>
                   <form method="POST" action="{% url 'pinjamBuku:updateStatusTransaction'%}">
                     {% csrf_token %}
+                    <input type="hidden" name="page_number" value="{{ page.number }}" />
                     <input type="hidden" name="status" value="cancel" />
                     <input type="hidden" name="id" value="{{ transaction.id }}" />
                     <input class="bg-red-300 p-2 rounded-md hover:cursor-pointer mt-2" type="submit" value="Cancel" />
@@ -75,24 +95,6 @@
             <td class="py-2 px-4 border-b text-center" colspan="5">No data available, try create new transaction</td>
           </tr>
           {% endif %}
-          <!-- <tr>
-            <td class="py-2 px-4 border-b">1</td>
-            <td class="py-2 px-4 border-b">Alice</td>
-            <td class="py-2 px-4 border-b">alice@example.com</td>
-            <td class="py-2 px-4 border-b">Admin</td>
-          </tr>
-          <tr class="bg-gray-100">
-            <td class="py-2 px-4 border-b">2</td>
-            <td class="py-2 px-4 border-b">Bob</td>
-            <td class="py-2 px-4 border-b">bob@example.com</td>
-            <td class="py-2 px-4 border-b">User</td>
-          </tr>
-          <tr>
-            <td class="py-2 px-4 border-b">3</td>
-            <td class="py-2 px-4 border-b">Charlie</td>
-            <td class="py-2 px-4 border-b">charlie@example.com</td>
-            <td class="py-2 px-4 border-b">User</td>
-          </tr> -->
         </tbody>
       </table>
     </div>
