--- a/pinjamBuku/templates/pinjamBuku/addTransaction.html
+++ b/pinjamBuku/templates/pinjamBuku/addTransaction.html
@@ -36,7 +36,7 @@
                 >
                   {% if list_borrower %} 
                     {% for borrower in list_borrower %}
-                        <option {% if borrower.id == borrowerid %}selected {% endif %} value="{{ borrower.id }}">
+                        <option {% if borrower.id == borrowerid %}selected {%endif%} value="{{ borrower.id }}">
                           {{ borrower.full_name }}
                         </option>
                     {% endfor %} 
@@ -71,7 +71,7 @@
                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6"
               >
                 {% if list_book %} {% for book in list_book %}
-                <option value="{{ book.id }}">{{ book.name }}</option>
+                <option {% if book.id == bookid %}selected {%endif%} value="{{ book.id }}">{{ book.name }}</option>
                 {% endfor %} {% else %}
                 <option value="null">
                   No Book available, please add book in admin page
