--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -26,7 +26,7 @@
   <body>
     <div class="font-sans text-gray-900 antialiased">
       <div
-        class="min-h-screen flex flex-col sm:justify-center items-center pt-6 sm:pt-0 bg-[#f8f4f3]"
+        class="min-h-screen my-2 flex flex-col sm:justify-center items-center pt-6 sm:pt-0 bg-[#f8f4f3]"
       >
         <div>
           <a href="/">
@@ -261,9 +261,8 @@
             ? "text"
             : "password";
         passwordInput.setAttribute("type", type);
-
-        
       });
+      
 
       ctogglePasswordButton.addEventListener("click", () => {
         const type =
