--- a/perpustakaanOnline/static/perpustakaanOnline/output.css
+++ b/perpustakaanOnline/static/perpustakaanOnline/output.css
@@ -610,6 +610,16 @@ video {
   margin-right: 2.5rem;
 }
 
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
